# Substrate-X-Theory-of-Information-Gravity

./: .aider.chat.history.md  .aider.input.history  .gitattributes  .gitignore  .zenodo.json  ACCOMPLISHMENT_SUMMARY.md  BOOK_COMPLETE.md  CONTRIBUTING.md  IG_SYSTEM_FIX_SUMMARY.md  INSTALL.md  LICENSE  PROJECT_COMPLETE.md  README.md  analyze_new_ig_system.py  analyze_wikipedia_final_fixed_v2.py  analyze_wikipedia_fixed.py  calculate_final_utd.py  calibration_params.txt  debug_bio_physics_normalization.py  debug_domain_details.py  debug_domain_init.py  debug_domain_states.py  debug_engine_ig.py  debug_engine_metrics.py  debug_engine_structure.py  debug_field_evolution.py  debug_ig_inputs.py  debug_integrator_methods.py  debug_max_vr.py  debug_metrics_evolution.py  debug_proper_domain_init.py  debug_stress_injection.py  demo_breakthrough_prediction.py  derive_universal_constant_fixed.py  fix_engine_alignment.py  fix_predictive_engine.py  parameter_fit.py  pyproject.toml  quant  quick_start.py  (+18 more)
DCIF/: SXC_V12_INTEGRATED_CORE.py
SXC-IGC/: UMDE_ARCHITECTURE.md  fact  readmi  umde
SXC_IGC/Domain-Calibrated_Instability_Framework(DCIF)/dcif_modules/Quantum_Decoherence_Module/VQEzy/: README.md  Substrate_Report.csv  analyze_all.py  analyze_vqe_gravity.py  ansatz.py  calculate_substrate_drag.py  check_nh3_specifics.py  data_sampling.py  dcif_substrate_ground_truth.csv  find_break_point.py  map_nh3_scaling.py  map_qasm_fracture.py  map_structural_fracture.py  map_xyz_fracture.py  pyproject.toml  simulate_qasm_load.py  sxc_core.py  sxc_omega_engine.py  visualization.ipynb
(+8010 files in other folders)
