[project]
name = "vqezy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "pandas>=2.3.2",
    "pennylane>=0.42.3",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "torchquantum",
]

[tool.uv.sources]
torchquantum = { git = "https://github.com/mit-han-lab/torchquantum.git" }
